Add header box to index.html style box in style.css

--- a/index.html
+++ b/index.html
@@ -2,9 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
     <title>Landing Page</title>
 </head>
 <body>
+    <div class="header">
+        <div class="header-top">
+        <div class="logo">Header Logo</div>
+        <div class="links">
+            <a href="https://en.wikipedia.org/wiki/Crochet">header link one</a>
+            <a href="https://www.crochet.org/page/CrochetHistory">header link two</a>
+            <a href="https://sarahmaker.com/how-to-crochet/">header link three</a>
+        </div>
+        </div>
+        <div class="header-body">
+            <div class="header-text">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                <button>Sign up</button>
+
+            </div>
+            <div class="header-image"></div>
+        </div>
+        
+
+    </div>
 
 </body>
 </html>
