--- a/index.html
+++ b/index.html
@@ -24,9 +24,29 @@
             </div>
             <div class="header-image"></div>
         </div>
-        
-
     </div>
 
+    <div class="information">
+        <h2>Some random information</h2>
+        <div class="information-items">
+            <div class="info-item"> 
+            <div class="box"></div>
+            <p class="info-text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info-item"> 
+            <div class="box"></div>
+            <p class="info-text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info-item"> 
+            <div class="box"></div>
+            <p class="info-text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info-item"> 
+            <div class="box"></div>
+            <p class="info-text">this is some subtext under an illustration or image</p>
+            </div>
+            
+        </div>
+    </div>
 </body>
 </html>
