--- a/index.html
+++ b/index.html
@@ -55,5 +55,17 @@
         </p>
         <p class="quote-att">-Thor, God of Thunder</p>
     </div>
+
+    <div class="call-box">
+        <div class="call-text">
+            <h4>Call to action! It's time!</h4>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button class="call-button">Sign up</button>
+    </div>
+
+    <div class="copyright">
+        Copyright © The Odin Project 2021
+    </div>
 </body>
 </html>
