Edit add style to index.html and style.css

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
         <div class="header-body">
             <div class="header-text">
                 <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                <button>Sign up</button>
+                <p class="hero-sub-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                <button class="hero-button">Sign up</button>
 
             </div>
-            <div class="header-image"></div>
+            <div class="header-image">
+                <div class="image-text">this is a placeholder for an image </div>
+            </div>
         </div>
     </div>
 
@@ -64,7 +66,7 @@
         <button class="call-button">Sign up</button>
     </div>
 
-    <div class="copyright">
+    <div class="footer">
         Copyright © The Odin Project 2021
     </div>
 </body>
