--- a/index.html
+++ b/index.html
@@ -27,20 +27,24 @@
 
     <div class="information">
         <h2>Some random information.</h2>
-        <div class="info-box">
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-        </div>
-        <div class="info-text"> 
-            <p class="text">this is some subtext under an illustration or image</p>
-            <p class="text">this is some subtext under an illustration or image</p>
-            <p class="text">this is some subtext under an illustration or image</p>
-            <p class="text">this is some subtext under an illustration or image</p>
-        </div>
-            
-        
+        <div class="info-container">
+            <div class="info-box">
+                <div class="box"></div>
+                <p class="text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info-box">
+                <div class="box"></div>
+                <p class="text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info-box">
+                <div class="box"></div>
+                <p class="text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info-box">
+                <div class="box"></div>
+                <p class="text">this is some subtext under an illustration or image</p>
+            </div>
+        </div>  
     </div>
 
     <div class="quote-box">
