--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="call-box">
         <div class="call-text">
             <h4>Call to action! It's time!</h4>
-            <p>Sign up for our product by clicking that button right over there!</p>
+            <p class="sign-up">Sign up for our product by clicking that button right over there!</p>
         </div>
         <button class="call-button">Sign up</button>
     </div>
