--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
 
     <div class="footer">
-        Copyright © The Odin Project 2021
+        <div class="copyright"> Copyright © The Odin Project 2021 </div>
     </div>
 </body>
 </html>
