--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="header">
         <div class="header-top">
-        <div class="logo">Header Logo</div>
+        <div class="hero-text">Header Logo</div>
         <div class="links">
             <a href="https://en.wikipedia.org/wiki/Crochet">header link one</a>
             <a href="https://www.crochet.org/page/CrochetHistory">header link two</a>
